# gaussian_image

./: .gitignore  Cargo.toml  README.md  build_wasm.sh  convert.py  gaussian_model.npz  gen_overview.py  kodak04_9000.npz  kodim01_9000.npz  model.npz  test_model.npz
.github/: webpage.yml
.github/workflows/: webpage.yml
public/: index.html  viewer.html
public/gaussian_images/div2k/0801/: model_f16.npz
public/gaussian_images/div2k/0802/: model_f16.npz
public/gaussian_images/div2k/0803/: model_f16.npz
public/gaussian_images/div2k/0804/: model_f16.npz
public/gaussian_images/div2k/0805/: model_f16.npz
public/gaussian_images/div2k/0806/: model_f16.npz
public/gaussian_images/div2k/0807/: model_f16.npz
public/gaussian_images/div2k/0808/: model_f16.npz
public/gaussian_images/div2k/0809/: model_f16.npz
public/gaussian_images/div2k/0810/: model_f16.npz
public/gaussian_images/div2k/0811/: model_f16.npz
public/gaussian_images/div2k/0812/: model_f16.npz
public/gaussian_images/div2k/0813/: model_f16.npz
public/gaussian_images/div2k/0814/: model_f16.npz
public/gaussian_images/div2k/0815/: model_f16.npz
public/gaussian_images/div2k/0816/: model_f16.npz
public/gaussian_images/div2k/0817/: model_f16.npz
public/gaussian_images/div2k/0818/: model_f16.npz
public/gaussian_images/div2k/0819/: model_f16.npz
public/gaussian_images/div2k/0820/: model_f16.npz
public/gaussian_images/div2k/0821/: model_f16.npz
public/gaussian_images/div2k/0822/: model_f16.npz
src/: gaussian.rs  lib.rs  web.rs
src/shaders/: display.wgsl  gaussian.wgsl
(+102 files in other folders)
