[package]
name = "gauss_img"
version = "0.1.0"
edition = "2024"

[dependencies]
wgpu = "23"
eframe = {version="0.30",features = ["wgpu"]}
emath = "0.31"
bytemuck = "1.7"
rand = "0.9"
npyz = {version = "0.8.3",features = ["npz"]}
anyhow = "1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster = {version = "0.4.0",features = ["macro"]}
clap = { version = "4.5", features = ["derive"] }