[package]
name = "gauss_img"
version = "0.1.0"
edition = "2024"

[dependencies]
wgpu = {version="23",features = ["webgl","fragile-send-sync-non-atomic-wasm"], default-features =true}

eframe = {version="0.30",default-features = false ,features = ["wgpu","x11","wayland","default_fonts"]}
emath = "0.31"
bytemuck = "1.7"
npyz = {version = "0.8.3",features = ["npz","half"]}
anyhow = "1.0"
ehttp = "0.5.0"
half = {version = "2.5.0",features = ["num-traits"]}
num-traits = "0.2.19"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster = {version = "0.4.0",features = ["macro"]}
clap = { version = "4.5", features = ["derive"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]

wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.23"
console_error_panic_hook = "0.1.7"
console_log = "1"
web-sys = { version = "0.3.69",features = ["UrlSearchParams"] }
log = "0.4"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
wasm-bindgen-cli = "0.2.93"


[profile.web-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"
